--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,8 +12,7 @@
 <div style="text-align:center">
   <button (click)='getData()'>Fetch Data</button>
 
-  <div class="">
-    <table class='table'>
+    <table class='table table-hover'>
       <tbody>
         <tr style="text-align:center">
           <th>Name</th>
@@ -31,7 +30,6 @@
         </tr>
       </tbody>
     </table>
-  </div>
 </div>
 
 </div>
